@@ -1,5 +1,10 @@
 2007-05-25  Denis Washington  <denisw@svn.gnome.org>
 
+	* theme-thumbnail.c:
+	Make gtk+ theme previews more compact.
+
+2007-05-25  Denis Washington  <denisw@svn.gnome.org>
+
 	* theme-thumbnail.[ch]:
 	Add functions to generate thumbnails for specific types of themes, for
 	instance a metacity theme thumbnail.
